<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="access_sd_fail">"Couldn't access SD card."</string>
    <string name="accessibility_cancel_button">Cancel</string>
    <string name="accessibility_capture_photo">Capture photo</string>
    <string name="accessibility_capture_video_start">Start Recording</string>
    <string name="accessibility_capture_video_stop">Stop Recording</string>
    <string name="accessibility_close_button">Close</string>
    <string name="accessibility_done_button">Done</string>
    <string name="accessibility_filmstrip_toggle">Photo gallery</string>
    <string name="accessibility_menu_button">Menu</string>
    <string name="accessibility_mode_burst">5 second burst</string>
    <string name="accessibility_mode_last_filmstrip_item">Scroll to last item</string>
    <string name="accessibility_mode_list_hidden">Mode list closed</string>
    <string name="accessibility_mode_list_shown">Mode list open</string>
    <string name="accessibility_mode_next_filmstrip_item">Scroll to next item</string>
    <string name="accessibility_mode_options">Options</string>
    <string name="accessibility_mode_zoom_minus">Zoom out</string>
    <string name="accessibility_mode_zoom_plus">Zoom in</string>
    <string name="accessibility_open_photo_mode">Open photo mode</string>
    <string name="accessibility_open_video_mode">Open video mode</string>
    <string name="accessibility_photo_captured">Photo Captured</string>
    <string name="accessibility_review_cancel">Review cancel</string>
    <string name="accessibility_review_ok">Review done</string>
    <string name="accessibility_review_retake">Review retake</string>
    <string name="accessibility_shutter_button">Shutter</string>
    <string name="accessibility_switch_photo_mode">Open photo mode</string>
    <string name="accessibility_switch_to_camera">Switch to photo</string>
    <string name="accessibility_switch_to_gcam">Switch to high quality</string>
    <string name="accessibility_switch_to_panorama">Switch to panorama</string>
    <string name="accessibility_switch_to_photo_sphere">Switch to Photo Sphere</string>
    <string name="accessibility_switch_to_refocus">Switch to Refocus</string>
    <string name="accessibility_switch_to_video">Switch to video</string>
    <string name="accessibility_switch_video_mode">Open video mode</string>
    <string name="accessibility_unlock_to_camera">Unlock to Camera</string>
    <string name="accessibility_zoom_announcement">Zoom value is %.1f</string>
    <string name="action_calendar">Add Event</string>
    <string name="action_call">Call</string>
    <string name="action_contact">Add Contact</string>
    <string name="action_copy">Copy text</string>
    <string name="action_email">Send Email</string>
    <string name="action_image_search">Search Image</string>
    <string name="action_keep">Keep</string>
    <string name="action_lookup">Shopping</string>
    <string name="action_map">Maps</string>
    <string name="action_message_image">Message</string>
    <string name="action_more">More</string>
    <string name="action_open_url">Open URL</string>
    <string name="action_save">Save image</string>
    <string name="action_search">Search</string>
    <string name="action_share_chooser_title">Share with</string>
    <string name="action_shopping">Shopping</string>
    <string name="action_sms">Message</string>
    <string name="action_translate">Translate</string>
    <string name="advice_dirty_lens_popup_text">"Lens smudges aren't always easy to see, and they can come from fingerprints, oil or dirt.

Clean your lens for better photo quality."</string>
    <string name="advice_scene_distance_description">The person or subject is to close to the camera to produce a sharp image.</string>
    <string name="advice_scene_distance_message">Move back to improve focus</string>
    <string name="advice_snackbar_dirty_lens">Lens may be dirty</string>
    <string name="af_ae_lock">AF / AE Lock</string>
    <string name="aggregate_add_field">Add Field</string>
    <string name="all_photos">ALL PHOTOS</string>
    <string name="animation">Animation</string>
    <string name="aperture">Aperture</string>
    <string name="app_name">Camera</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="authentication_error">Authentication Error</string>
    <string name="auto">Auto</string>
    <string name="auto_flash_indicator_chip">Flash will fire</string>
    <string name="bottom_center">Bottom-center</string>
    <string name="bottom_left">Bottom-left</string>
    <string name="bottom_right">Bottom-right</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="btn_last_filmstrip_item">Last</string>
    <string name="btn_next_filmstrip_item">Next</string>
    <string name="btn_zoom_minus">Z-</string>
    <string name="camera_quality_high">hq</string>
    <string name="mode_video">Video</string>
    <string name="photo">Photo</string>
    <string name="pref_auto_generate_artifacts_toggle">Auto Generate Creations</string>
    <string name="pref_burst_settings">Burst Mode</string>
    <string name="pref_burst_title">SmartBurst</string>
    <string name="pref_camera_dirty_lens_title">Dirty Lens Warning</string>
    <string name="pref_camera_double_tap_zoom_title">Double Tap to Zoom</string>
    <string name="pref_camera_gestures_title">Gestures</string>
    <string name="pref_camera_picturesize_default">large</string>
    <string name="pref_camera_save_location_title">Save Location</string>
    <string name="pref_camera_sounds_title">Shutter Sound</string>
    <string name="pref_camera_volume_key_action_title">Volume Key Action</string>
    <string name="pref_category_about">About</string>
    <string name="pref_category_advanced">Advanced</string>
    <string name="pref_developer_settings">Developer Settings</string>
    <string name="pref_gcam_hdr_raw_title">Save RAW Images</string>
    <string name="pref_title_photo_sphere_and_panorama_resolution">Panorama Resolution</string>
    <string name="pref_video_quality_large">large</string>
    <string name="pref_video_stabilization">Video Stabilization</string>
    <string name="setting_back_camera_photo">Rear Camera Photo Resolution</string>
    <string name="setting_back_camera_video">Rear Camera Video Resolution</string>
    <string name="setting_front_camera_photo">Front Camera Photo Resolution</string>
    <string name="setting_front_camera_video">Front Camera Video Resolution</string>
    <string name="setting_general">General</string>
    <string name="volume_key_shutter">Shutter</string>
    <string name="pref_developer_title">Debugging and Tools</string>
    <string name="pref_parameters_camera_title">Parameters</string>
    <string name="pref_parameters_camera_summary">%s</string>
    <string name="pref_parameters_camera_default">5</string>
    <string name="pref_compress_jpeg_title">Image Quality</string>
    <string name="pref_compress_jpeg_summary">%s</string>
    <string name="pref_compress_jpeg_default">100</string>
    <string name="pref_compress_dng_title">Compress RAW Images</string>
    <string name="pref_refocus_resolution_title">Lens Blur Resolution</string>
    <string name="pref_refocus_resolution_summary">%s</string>
    <string name="pref_refocus_resolution_default">5</string>
    <string name="pref_enable_lowlight_title">Low Light Mode</string>
    <string name="pref_enable_noise_title">Improve Sharpness</string>
    <string name="pref_hdrplus_settings_title">HDR+</string>
    <string name="pref_misc_settings_title">Misc</string>
    <string name="pref_raw_settings_title">RAW</string>
    <string name="pref_portrait_settings_title">Portrait Mode</string>
    <string name="pref_disable_slowmotion_title">Disable video slow motion</string>
    <string name="pref_disable_slowmotion_summary">If slow motion crash on your devices</string>
    <string name="pref_paemode_title">Enable Auto Exposure</string>
    <string name="pref_aemode_title">Auto Exposure</string>
    <string name="pref_aemode_default">0</string>
    <string name="pref_disable_zoom_title">Disable Zoom</string>
    <string name="pref_use_hexagon_title">Use Hexagon (QDSP)</string>
    <string name="pref_classic_smartburst_title">Classic Smartburst</string>
    <string name="pref_enable_hdrplus_portrait_title">Enable HDR+ Enhanced</string>
    <string name="pref_supported_hardware_level_back_title">Use for HW level back camera</string>
    <string name="pref_supported_hardware_level_back_default">0</string>
    <string name="pref_supported_hardware_level_front_title">Use for HW level front camera</string>
    <string name="pref_supported_hardware_level_front_default">0</string>
    <string name="pref_support_level_override_title">Support level override</string>
    <string name="pref_support_level_override_default">0</string>
    <string name="pref_experimental_test">Fix Camera API2</string>
    <string name="pref_force_hdrplus_enhanced_title">Force HDR+ Enhanced</string>
    <string name="pref_force_hdrplus_enhanced_summary">If HDR+ Enhanced crash on your devices</string>
    <string name="about_dev_title">Google Camera</string>
    <string name="about_dev_1_title">Original Developers</string>
    <string name="about_dev_1_summary">B-S-G, Arnova8G5</string>
    <string name="about_dev_2_title">Modded By</string>
    <string name="about_dev_2_summary">SKULSHADY</string>
    <string name="about_dev_3_title">Version</string>
    <string name="about_dev_3_summary">6.0</string>
    <string name="about_dev_4_title">XDA Thread</string>
    <string name="about_dev_4_summary"></string>
    <string name="about_dev_5_title">Telegram Group</string>
    <string name="about_dev_5_summary"></string>
    <string name="gcam_title">Google Camera Mod</string>
</resources>