<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:orderingFromXml="true" android:key="prefscreen_top"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/photo" android:key="pref_category_resolution_camera">
        <Preference android:enabled="false" android:layout="@layout/hide" android:key="pref_launch_help" />
        <ListPreference android:layout="@layout/preference_with_icon" android:title="@string/setting_back_camera_photo" android:icon="@drawable/ic_photo_camera_back_grey600_24dp" android:key="pref_camera_picturesize_back_key" android:summary="%s" android:defaultValue="@string/pref_camera_picturesize_default" android:entryValues="@array/pref_camera_picturesize_entryvalues" />
        <ListPreference android:layout="@layout/preference_with_icon" android:title="@string/setting_front_camera_photo" android:icon="@drawable/ic_photo_camera_front_grey600_24dp" android:key="pref_camera_picturesize_front_key" android:summary="%s" android:defaultValue="@string/pref_camera_picturesize_default" android:entryValues="@array/pref_camera_picturesize_entryvalues" />
        <ListPreference android:entries="@array/pref_lightcycle_quality_entries" android:layout="@layout/preference_with_icon" android:title="@string/pref_title_photo_sphere_and_panorama_resolution" android:icon="@drawable/quantum_ic_panorama_grey600_24" android:key="pref_lightcycle_quality_key" android:summary="%s" android:defaultValue="@string/camera_quality_high" android:entryValues="@array/pref_lightcycle_quality_entryvalues" />
        <ListPreference android:entries="@array/pref_refocus_resolution_entries" android:layout="@layout/preference_with_icon" android:title="@string/pref_refocus_resolution_title" android:key="pref_refocus_resolution_key" android:summary="@string/pref_refocus_resolution_summary" android:icon="@drawable/quantum_ic_lensblur_grey600_24" android:defaultValue="@string/pref_refocus_resolution_default" android:entryValues="@array/pref_refocus_resolution_entryvalues" />
        <PreferenceScreen android:layout="@layout/preference_with_icon" android:title="@string/pref_category_advanced" android:icon="@drawable/quantum_ic_expand_more_grey600_24" android:key="pref_category_advanced">
            <PreferenceCategory android:title="@string/pref_hdrplus_settings_title" android:key="pref_category_hdrplus">
                <ListPreference android:entries="@array/pref_aemode_entries" android:layout="@layout/preference_with_margin" android:title="@string/pref_aemode_title" android:key="pref_aemode_key" android:summary="%s" android:defaultValue="@string/pref_aemode_default" android:entryValues="@array/pref_aemode_entryvalues" />
                <ListPreference android:entries="@array/pref_compress_jpeg_entries" android:layout="@layout/preference_with_margin" android:title="@string/pref_compress_jpeg_title" android:key="pref_compress_jpeg_key" android:summary="@string/pref_compress_jpeg_summary" android:defaultValue="@string/pref_compress_jpeg_default" android:entryValues="@array/pref_compress_jpeg_entryvalues" />
                <ListPreference android:entries="@array/pref_parameters_camera_entries" android:layout="@layout/preference_with_margin" android:title="@string/pref_parameters_camera_title" android:key="pref_parameters_camera_key" android:summary="@string/pref_parameters_camera_summary" android:defaultValue="@string/pref_parameters_camera_default" android:entryValues="@array/pref_parameters_camera_entryvalues" />
                <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:layout="@layout/preference_with_margin" android:title="@string/pref_enable_noise_title" android:key="pref_enable_noise_key" android:defaultValue="false" />
                <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:layout="@layout/preference_with_margin" android:title="@string/pref_enable_lowlight_title" android:key="pref_enable_lowlight_key" android:defaultValue="false" />
                <PreferenceScreen android:layout="@layout/hide" android:title="@string/pref_experimental_test" android:key="pref_category_experimental">
                    <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:layout="@layout/preference_with_icon" android:title="@string/pref_force_hdrplus_enhanced_title" android:key="pref_force_hdrplus_enhanced_key" android:summary="@string/pref_force_hdrplus_enhanced_summary" android:defaultValue="false" />
                    <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:layout="@layout/preference_with_icon" android:title="@string/pref_disable_slowmotion_title" android:key="pref_disable_slowmotion_key" android:summary="@string/pref_disable_slowmotion_summary" android:defaultValue="false" />
                    <ListPreference android:entries="@array/pref_support_level_override_entries" android:layout="@layout/preference_with_icon" android:title="@string/pref_support_level_override_title" android:key="pref_support_level_override_key" android:summary="%s" android:defaultValue="@string/pref_support_level_override_default" android:entryValues="@array/pref_support_level_override_entryvalues" />
                    <ListPreference android:entries="@array/pref_supported_hardware_level_back_entries" android:layout="@layout/preference_with_icon" android:title="@string/pref_supported_hardware_level_back_title" android:key="pref_supported_hardware_level_back_key" android:summary="%s" android:defaultValue="@string/pref_supported_hardware_level_back_default" android:entryValues="@array/pref_supported_hardware_level_back_entryvalues" />
                    <ListPreference android:entries="@array/pref_supported_hardware_level_front_entries" android:layout="@layout/preference_with_icon" android:title="@string/pref_supported_hardware_level_front_title" android:key="pref_supported_hardware_level_front_key" android:summary="%s" android:defaultValue="@string/pref_supported_hardware_level_front_default" android:entryValues="@array/pref_supported_hardware_level_front_entryvalues" />
                </PreferenceScreen>
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/pref_raw_settings_title" android:key="pref_category_raw">
                <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:layout="@layout/preference_with_margin" android:title="@string/pref_gcam_hdr_raw_title" android:key="pref_camera_hdr_plus_raw_out_key" android:defaultValue="false" />
                <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:layout="@layout/preference_with_margin" android:title="@string/pref_compress_dng_title" android:key="pref_compress_dng_key" android:defaultValue="false" />
                <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:layout="@layout/preference_with_margin" android:title="@string/pref_use_hexagon_title" android:key="pref_use_hexagon_key" android:defaultValue="true" />
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/pref_portrait_settings_title" android:key="pref_category_portrait">
                <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:layout="@layout/preference_with_margin" android:title="@string/pref_enable_hdrplus_portrait_title" android:key="pref_enable_hdrplus_portrait_key" android:defaultValue="false" />
                <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:layout="@layout/preference_with_margin" android:title="@string/pref_paemode_title" android:key="pref_paemode_key" android:defaultValue="false" />
                <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:layout="@layout/preference_with_margin" android:title="@string/pref_disable_zoom_title" android:key="pref_disable_zoom_key" android:defaultValue="false" />
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/pref_burst_settings" android:key="pref_category_smartburst">
                <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:layout="@layout/preference_with_margin" android:title="@string/pref_burst_title" android:key="pref_smartburst_classicburst" android:defaultValue="true" />
                <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:layout="@layout/preference_with_margin" android:title="@string/pref_auto_generate_artifacts_toggle" android:key="pref_auto_generate_artifacts" android:defaultValue="true" />
                <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:layout="@layout/preference_with_margin" android:title="@string/pref_classic_smartburst_title" android:key="pref_classic_smartburst_key" android:defaultValue="false" />
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/pref_misc_settings_title" android:key="pref_category_misc" android:layout="@layout/hide">
                <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:layout="@layout/hide" android:title="@string/pref_camera_dirty_lens_title" android:key="pref_camera_dirty_lens_key" android:defaultValue="true" />
            </PreferenceCategory>
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/mode_video" android:key="pref_category_resolution_video">
        <ListPreference android:layout="@layout/preference_with_icon" android:title="@string/setting_back_camera_video" android:icon="@drawable/ic_video_camera_back_grey600_24dp" android:key="pref_video_quality_back_key" android:summary="%s" android:defaultValue="@string/pref_video_quality_large" android:entryValues="@array/pref_video_quality_entryvalues" />
        <ListPreference android:layout="@layout/preference_with_icon" android:title="@string/setting_front_camera_video" android:key="pref_video_quality_front_key" android:summary="%s" android:icon="@drawable/ic_video_camera_front_grey600_24dp" android:defaultValue="@string/pref_video_quality_large" android:entryValues="@array/pref_video_quality_entryvalues" />
        <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:layout="@layout/preference_with_icon" android:title="@string/pref_video_stabilization" android:icon="@drawable/ic_featured_video_24px" android:key="pref_video_stabilization_key" android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/setting_general" android:key="pref_category_general">
        <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:layout="@layout/preference_with_icon" android:title="@string/pref_camera_save_location_title" android:icon="@drawable/quantum_ic_place_grey600_24" android:key="pref_camera_recordlocation_key" android:order="0" android:defaultValue="false" />
        <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:layout="@layout/preference_with_icon" android:title="@string/pref_camera_sounds_title" android:icon="@drawable/quantum_ic_volume_up_grey600_24" android:key="pref_camera_sounds_key" android:order="1" android:defaultValue="true" />
        <PreferenceScreen android:layout="@layout/preference_with_icon" android:title="@string/pref_camera_gestures_title" android:icon="@drawable/quantum_ic_touch_app_grey600_24" android:key="pref_category_gestures" android:order="10">
            <ListPreference android:entries="@array/pref_volume_action_entries" android:layout="@layout/preference_with_margin" android:title="@string/pref_camera_volume_key_action_title" android:key="pref_volume_key_action" android:summary="%s" android:defaultValue="@string/volume_key_shutter" android:entryValues="@array/pref_volume_action_entryvalues" />
            <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:layout="@layout/preference_with_margin" android:title="@string/pref_camera_double_tap_zoom_title" android:key="pref_double_tap_zoom_key" android:defaultValue="true" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_developer_title" android:key="pref_developer_and_help">
        <PreferenceScreen android:layout="@layout/preference_with_icon" android:title="@string/pref_developer_settings" android:key="pref_category_developer" android:icon="@drawable/quantum_ic_developer_mode_grey600_24"/>
        <Preference android:enabled="false" android:layout="@layout/hide" android:key="pref_launch_feedback" />
    </PreferenceCategory>
</PreferenceScreen>
