<?xml version="1.0" encoding="utf-8"?>
<PreferenceCategory android:title="@string/pref_category_about" android:key="pref_category_about"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen android:layout="@layout/preference_with_icon" android:title="@string/pref_category_about" android:icon="@drawable/ic_information_grey600_24dp" android:key="pref_category_about">
		<PreferenceCategory android:title="@string/gcam_title" android:key="pref_category_gcam">
        <PreferenceScreen android:layout="@layout/preference_with_margin" android:title="@string/about_dev_title" android:summary="v5.1.018.177624777">
            <intent android:action="android.settings.APPLICATION_DETAILS_SETTINGS" android:data="package:com.google.android.GoogleCamera" />
        </PreferenceScreen>
        <PreferenceScreen android:layout="@layout/preference_with_margin" android:title="@string/about_dev_1_title" android:summary="@string/about_dev_1_summary"/>
        <PreferenceScreen android:layout="@layout/preference_with_margin" android:title="@string/about_dev_2_title" android:summary="@string/about_dev_2_summary">
            <intent android:action="android.intent.action.VIEW" android:data="https://forum.xda-developers.com/member.php?u=7578917" />
        </PreferenceScreen>
        <PreferenceScreen android:layout="@layout/preference_with_margin" android:title="@string/about_dev_3_title" android:summary="@string/about_dev_3_summary"/>
        <PreferenceScreen android:layout="@layout/preference_with_margin" android:title="@string/about_dev_4_title" android:summary="@string/about_dev_4_summary">
            <intent android:action="android.intent.action.VIEW" android:data="https://forum.xda-developers.com/oneplus-3/oneplus-3--3t-cross-device-themes-apps--mods/app-google-camera-mod-t3735251" />
        </PreferenceScreen>
        <PreferenceScreen android:layout="@layout/preference_with_margin" android:title="@string/about_dev_5_title" android:summary="@string/about_dev_5_summary">
            <intent android:action="android.intent.action.VIEW" android:data="https://t.me/GCam_SKULSHADY" />
        </PreferenceScreen>
        </PreferenceCategory>
    </PreferenceScreen>
</PreferenceCategory>
            
